# apps/main/src/spec/openapi.yaml
@@ -20,10 +20,6 @@ paths:
       responses:
         '201':
           description: User created
-          content:
-            application/json:    
-              schema:
-                $ref: "#/components/schemas/Challenge"
         default:
           description: unexpected error
           content:
@@ -41,6 +37,7 @@ paths:
           required: true
           schema:
             type: string
+            minLength: 3
       responses:
         '200':
           description: A list of users
@@ -182,10 +179,13 @@ components:
       properties:
         token:
           type: string
+          format: byte
         passphrase:
           type: string
+          format: byte
         iv:
           type: string
+          format: byte
     UsersList:
       type: array
       items:
@@ -227,9 +227,11 @@ components:
         to:
           type: string
         title:
-          $ref: "#/components/schemas/Challenge"
+          type: string
+          format: byte
         content:
-          $ref: "#/components/schemas/Challenge"
+          type: string
+          format: byte
     Error:
       type: object
       properties:
